--- a/RxJava系列教程/11.RxJava 教程第三部分：驯服数据流之 高级错误处理.md
+++ b/RxJava系列教程/11.RxJava 教程第三部分：驯服数据流之 高级错误处理.md
@@ -6,7 +6,7 @@
 
 onErrorReturn 操作函数的功能是：当发生错误的时候，发射一个默认值然后结束数据流。所以 Subscriber 看不到异常信息，看到的是正常的数据流结束状态。
 
-![这里写图片描述](http://img.blog.csdn.net/20160706095925770)
+![RxJava](http://img.blog.csdn.net/20160706095925770)
 
 ```
 Observable<String> values = Observable.create(o -> {
@@ -39,7 +39,7 @@ public final Observable<T> onErrorResumeNext(
     Func1<java.lang.Throwable,? extends Observable<? extends T>> resumeFunction)1234
 ```
 
-![这里写图片描述](http://img.blog.csdn.net/20160706100242649)
+![RxJava](http://img.blog.csdn.net/20160706100242649)
 
 第二个重载的函数可以根据错误的信息来返回不同的 Observable。
 
@@ -96,7 +96,7 @@ public final Observable<T> retry()
 public final Observable<T> retry(long count)12
 ```
 
-![这里写图片描述](http://img.blog.csdn.net/20160706103843065)
+![RxJava](http://img.blog.csdn.net/20160706103843065)
 
 没有参数的 retry() 函数会一直重试，直到没有异常发生为止。而带有参数的 retry(n) 函数会重试 N 次， 如果 N 次后还是失败，则不再重试了，数据流发射一个异常信息并结束。
 
@@ -138,7 +138,7 @@ retryWhen 的参数是一个函数， 该函数的输入参数为一个异常 Ob
 - 如果返回的 Observable 发射了一个错误信息，retryWhen 将会发射一个错误并不会重试
 - 如果返回的 Observable 正常结束了，retryWhen 也正常结束。
 
-参数返回的 Observable 发射的数据类型是无关紧要的。该 Observable 的数据只是用来当做是否重试的信号。数据本身是无用的。 
+参数返回的 Observable 发射的数据类型是无关紧要的。该 Observable 的数据只是用来当做是否重试的信号。数据本身是无用的。
 下面一个示例，构造一个等待 100 毫秒再重试的机制：
 
 ```
