--- a/RxJava系列教程/15.RxJava 教程第三部分：驯服数据流之 hot & cold Observable.md
+++ b/RxJava系列教程/15.RxJava 教程第三部分：驯服数据流之 hot & cold Observable.md
@@ -43,7 +43,7 @@ Cold Observable 和 Hot Observable 之间可以相互转化。使用 publish 操
 public final ConnectableObservable<T> publish()1
 ```
 
-![这里写图片描述](http://img.blog.csdn.net/20160706150113514)
+![RxJava](http://img.blog.csdn.net/20160706150113514)
 
 publish 返回一个 ConnectableObservable 对象，这个对象是 Observable 的之类，多了三个函数：
 
@@ -211,7 +211,7 @@ First: 41234567891011121314151617
 public final ConnectableObservable<T> replay()1
 ```
 
-![这里写图片描述](http://img.blog.csdn.net/20160706150420003)
+![RxJava](http://img.blog.csdn.net/20160706150420003)
 
 replay 和 ReplaySubject 类似。当和源 Observable 链接后，开始收集数据。当有 Observer 订阅的时候，就把收集到的数据线发给 Observer。然后和其他 Observer 同时接受数据。
 
@@ -292,7 +292,7 @@ public final Observable<T> cache()
 public final Observable<T> cache(int capacity)12
 ```
 
-![这里写图片描述](http://img.blog.csdn.net/20160706150701492)
+![RxJava](http://img.blog.csdn.net/20160706150701492)
 
 ```
 Observable<Long> obs = Observable.interval(100, TimeUnit.MILLISECONDS)
