--- a/RxJava系列教程/16.RxJava 教程第三部分：驯服数据流之自定义操作函数.md
+++ b/RxJava系列教程/16.RxJava 教程第三部分：驯服数据流之自定义操作函数.md
@@ -181,9 +181,9 @@ public class RunningAverage implements Observable.Transformer<Integer, Double> {
 
 ### lift
 
-一般而言，Rx 操作函数都做三件事： 
-\1. 订阅到源 Observable上并观察他们发生的数据 
-\2. 根据操作函数的目的来转换数据流 
+一般而言，Rx 操作函数都做三件事：
+\1. 订阅到源 Observable上并观察他们发生的数据
+\2. 根据操作函数的目的来转换数据流
 \3. 通过调用 onNext、 onError 和 onCompleted 函数 把转换后的数据发射给自己的订阅者。
 
 compose 的参数为一个函数，该函数把一个 Observable 转换为另外一个 Observable。并且需要手工的完成上面3步操作。并且假设你可以使用已有的操作函数完成转换。如果没有对应的操作函数，则需要使用传统的面向对象的方式来处理。这样你需要从数据流中提取转换数据后重新发射出去。Observable.Transformer 通过订阅到源 Observable 上来实现这个功能。
@@ -240,7 +240,7 @@ class MyMap<T,R> implements Observable.Operator<R, T> {
 }123456789101112131415161718192021222324252627282930313233
 ```
 
-map 操作函数需要一个参数把 T 转换为 R。上面 的实现中，transformer 干了这件事。关键点在于 call 函数的调用。我们收到了一个 Subscriber对象，该对象需要一个 R 类型数据。我们为个 Subscriber 创建了一个Subscriber 对象，并把 T 转换为 R 类型数据然后发射给 Subscriber。 lift 操作函数处理接受 Subscriber 的模板代码，并且使用 Subscriber 订阅到源 Observable上。 
+map 操作函数需要一个参数把 T 转换为 R。上面 的实现中，transformer 干了这件事。关键点在于 call 函数的调用。我们收到了一个 Subscriber对象，该对象需要一个 R 类型数据。我们为个 Subscriber 创建了一个Subscriber 对象，并把 T 转换为 R 类型数据然后发射给 Subscriber。 lift 操作函数处理接受 Subscriber 的模板代码，并且使用 Subscriber 订阅到源 Observable上。
 使用 Observable.Operator 和使用 Observable.Transformer 一样简单：
 
 ```
@@ -285,7 +285,7 @@ Observable.range(0, 5)
 
 如果你无法确保自定义的操作符符合 Rx 的约定，例如从多个源异步获取数据，则可以使用 serialize 操作函数。 serialize 可以把一个不符合约定的 Observable 转换为一个符合约定的 Observable。
 
-![这里写图片描述](http://img.blog.csdn.net/20160708225731519)
+![RxJava](http://img.blog.csdn.net/20160708225731519)
 
 下面创建一个不符合约定的 Observable，并且订阅到该 Observable上：
 
@@ -406,7 +406,7 @@ Completed123
 lift 和 compose 都是元操作符（meta-operators），用来把自定义的操作函数注射到串联调用中。这两种情况下，自定义操作符既可以用函数实现也可以用类实现：
 
 - compose: Observable.Transformer 或者 Func< Observable, Observable>
-- lift: Observable.Operator 或者 Func< Subscriber, Subscriber> 
+- lift: Observable.Operator 或者 Func< Subscriber, Subscriber>
   理论上，每个操作函数都可以实现 Observable.Operator 和 Observable.Transformer。如果选择是根据使用的便捷性和你想避免什么样的模板代码：
 - 如果自定义的操作函数只是现有的操作函数的组合，则使用 compose 比较自然
 - 如果自定义从操作函数需要从数据流中获取数据，并做一些处理后再次发射数据到数据流，则使用 lift 比较好。
