--- a/RxJava系列教程/19.RxJava 教程第四部分：并发 之意外情况处理.md
+++ b/RxJava系列教程/19.RxJava 教程第四部分：并发 之意外情况处理.md
@@ -1,6 +1,6 @@
 Rx 尽量避免状态泄露到数据流之外的场景。但是有些东西本身就带有状态。比如服务器可以上线和离线、手机可以访问Wifi、按钮被按下了等。在 Rx 中国，我们在一段时间内看到这些事件，并称之为窗口（window）。其他事件在这个窗口内发生可能需要特殊处理。例如，手机在使用移动收费上网的时候，会把网络请求优先级降低，来避免天价流量费的情况。
 
-> 注意：上面的一段话估计是翻译的，有点语句不通。更多参考官网： 
+> 注意：上面的一段话估计是翻译的，有点语句不通。更多参考官网：
 > <http://www.introtorx.com/Content/v1.0.10621.0/17_SequencesOfCoincidence.html#SequencesOfCoincidence>
 
 ### 窗口 Window
@@ -9,15 +9,15 @@ buffer 函数可以缓存多个数据并整体发射。 window 操作函数和 b
 
 下图可以看到二者的区别：
 
-![这里写图片描述](http://img.blog.csdn.net/20160709105255259)
+![RxJava](http://img.blog.csdn.net/20160709105255259)
 
-window ： 
-![这里写图片描述](http://img.blog.csdn.net/20160709105320181)
+window ：
+![RxJava](http://img.blog.csdn.net/20160709105320181)
 
 如果你还没有了解 buffer， 建议你到前面的章节下去看看 buffer。 buffer 和 window 的函数形式是一样的，功能也非常类似，并且易于理解。 buffer 都可以用 window 来实现其功能：
 
 ```
-source.buffer(...) 
+source.buffer(...)
 // 和下面的是一样的功能
 source.window(...).flatMap(w -> w.toList())123
 ```
@@ -26,7 +26,7 @@ source.window(...).flatMap(w -> w.toList())123
 
 窗口内可以限定数目。当窗口发射的数据达到了限定的数目，当前窗口的 Observable 就结束并开启一个新的窗口。
 
-![这里写图片描述](http://img.blog.csdn.net/20160709105653468)
+![RxJava](http://img.blog.csdn.net/20160709105653468)
 
 和buffer 一样， 使用 window(int count, int skip) 也可以跳过数据或者重叠使用数据。
 
@@ -78,8 +78,8 @@ Observable.range(0, 5)
 
 ### Window by time
 
-同样也可以指定窗口的时间长度： 
-![这里写图片描述](http://img.blog.csdn.net/20160709105951331)
+同样也可以指定窗口的时间长度：
+![RxJava](http://img.blog.csdn.net/20160709105951331)
 
 ```
 public final Observable<Observable<T>> window(long timespan, long timeshift, java.util.concurrent.TimeUnit unit)1
@@ -110,10 +110,10 @@ Observable.interval(100, TimeUnit.MILLISECONDS)
 
 同样也可以用另外一个信号 Observable当做窗口结束的信号。
 
-![这里写图片描述](http://errorpage.b0.upaiyun.com/yunzaiqianfeng-404) 
+![RxJava](http://errorpage.b0.upaiyun.com/yunzaiqianfeng-404)
 信号 Observable 直接也可以相互传递事件。
 
-![这里写图片描述](http://errorpage.b0.upaiyun.com/yunzaiqianfeng-404)
+![RxJava](http://errorpage.b0.upaiyun.com/yunzaiqianfeng-404)
 
 下面是使用信号 Observable 实现的重叠窗口：
 
@@ -158,10 +158,10 @@ join 比较难以理解以及强大之处就是如果选择组合的数据。当
 下面的示例中， 左Observable 数据流从来不结束而右Observable的时间窗口为 0.
 
 ```
-Observable<String> left = 
+Observable<String> left =
         Observable.interval(100, TimeUnit.MILLISECONDS)
             .map(i -> "L" + i);
-Observable<String> right = 
+Observable<String> right =
         Observable.interval(200, TimeUnit.MILLISECONDS)
             .map(i -> "R" + i);
 
@@ -196,10 +196,10 @@ L3 - R212345678910
 下面示例把左右源 Observable 发射的间隔都设置为 100ms，然后把左时间窗口设置为 150ms：
 
 ```
-Observable<String> left = 
+Observable<String> left =
         Observable.interval(100, TimeUnit.MILLISECONDS)
             .map(i -> "L" + i);
-Observable<String> right = 
+Observable<String> right =
         Observable.interval(100, TimeUnit.MILLISECONDS)
             .map(i -> "R" + i);
 
@@ -253,11 +253,11 @@ public final <T2,D1,D2,R> Observable<R> groupJoin(
 还使用第一个 join的示例，左边的数据流的时间窗口重来不关闭：
 
 ```
-Observable<String> left = 
+Observable<String> left =
         Observable.interval(100, TimeUnit.MILLISECONDS)
             .map(i -> "L" + i)
             .take(6);
-Observable<String> right = 
+Observable<String> right =
         Observable.interval(200, TimeUnit.MILLISECONDS)
             .map(i -> "R" + i)
             .take(3);
