--- a/RxJava系列教程/20.RxJava 教程第四部分：并发 之数据流发射太快如何办.md
+++ b/RxJava系列教程/20.RxJava 教程第四部分：并发 之数据流发射太快如何办.md
@@ -2,7 +2,7 @@
 
 Rx 中的数据流是从一个地方发射到另外一个地方。每个地方处理数据的速度是不一样的。如果生产者发射数据的速度比消费者处理的快会出现什么情况？在同步操作中，这不是个问题，例如：
 
-```
+```java
 // Produce
 Observable<Integer> producer = Observable.create(o -> {
     o.onNext(1);
@@ -15,16 +15,16 @@ producer.subscribe(i -> {
         Thread.sleep(1000);
         System.out.println(i);
     } catch (Exception e) { }
-});12345678910111213
+});
 ```
 
-​       虽然上面的消费者处理数据的速度慢，但是由于是同步调用的，所以当 o.onNext(1) 执行后，一直阻塞到消费者处理完才执行 o.onNext(2)。 但是生产者和消费者异步处理的情况很常见。如果是在异步的情况下会出现什么情况呢？
+​虽然上面的消费者处理数据的速度慢，但是由于是同步调用的，所以当 o.onNext(1) 执行后，一直阻塞到消费者处理完才执行 o.onNext(2)。 但是生产者和消费者异步处理的情况很常见。如果是在异步的情况下会出现什么情况呢？
 
-​       在传统的 pull 模型中，当消费者请求数据的时候，如果生产者比较慢，则消费者会阻塞等待。如果生产者比较快，则生产者会等待消费者处理完后再生产新的数据。
+​在传统的 pull 模型中，当消费者请求数据的时候，如果生产者比较慢，则消费者会阻塞等待。如果生产者比较快，则生产者会等待消费者处理完后再生产新的数据。
 
-​       而 Rx 为 push 模型。 在 Rx 中，只要生产者数据好了就发射出去了。如果生产者比较慢，则消费者就会等待新的数据到来。如果生产者快，则就会有很多数据发射给消费者，而不管消费者当前有没有能力处理数据。这样会导致一个问题，例如：
+​而 Rx 为 push 模型。 在 Rx 中，只要生产者数据好了就发射出去了。如果生产者比较慢，则消费者就会等待新的数据到来。如果生产者快，则就会有很多数据发射给消费者，而不管消费者当前有没有能力处理数据。这样会导致一个问题，例如：
 
-```
+```java
 Observable.interval(1, TimeUnit.MILLISECONDS)
     .observeOn(Schedulers.newThread())
     .subscribe(
@@ -34,7 +34,7 @@ Observable.interval(1, TimeUnit.MILLISECONDS)
                 Thread.sleep(100);
             } catch (Exception e) { }
         },
-        System.out::println);12345678910
+        System.out::println);
 ```
 
 结果：
@@ -42,7 +42,7 @@ Observable.interval(1, TimeUnit.MILLISECONDS)
 ```
 0
 1
-rx.exceptions.MissingBackpressureException123
+rx.exceptions.MissingBackpressureException
 ```
 
 上面的 MissingBackpressureException 告诉我们，生产者太快了，我们的操作函数无法处理这种情况。
@@ -55,9 +55,9 @@ rx.exceptions.MissingBackpressureException123
 
 sample 操作函数可以指定生产者发射数据的最大速度，多余的数据被丢弃了。
 
-![这里写图片描述](http://img.blog.csdn.net/20160709210940925)
+![RxJava](http://img.blog.csdn.net/20160709210940925)
 
-```
+```java
 Observable.interval(1, TimeUnit.MILLISECONDS)
     .observeOn(Schedulers.newThread())
     .sample(100, TimeUnit.MILLISECONDS)
@@ -68,7 +68,7 @@ Observable.interval(1, TimeUnit.MILLISECONDS)
                 Thread.sleep(100);
             } catch (Exception e) { }
         },
-        System.out::println);1234567891011
+        System.out::println);
 ```
 
 结果：
@@ -77,7 +77,7 @@ Observable.interval(1, TimeUnit.MILLISECONDS)
 82
 182
 283
-...1234
+...
 ```
 
 throttle 和 Debounce 也能实现类似的效果。
@@ -86,7 +86,7 @@ throttle 和 Debounce 也能实现类似的效果。
 
 如果你不想丢弃数据，则当消费者忙的时候可以使用 buffer 和 window 操作函数来收集数据。如果批量处理数据速度比较快，则可以使用这种方式。
 
-```
+```java
 Observable.interval(10, TimeUnit.MILLISECONDS)
     .observeOn(Schedulers.newThread())
     .buffer(100, TimeUnit.MILLISECONDS)
@@ -97,7 +97,7 @@ Observable.interval(10, TimeUnit.MILLISECONDS)
                 Thread.sleep(100);
             } catch (Exception e) { }
         },
-        System.out::println);1234567891011
+        System.out::println);
 ```
 
 结果：
@@ -106,7 +106,7 @@ Observable.interval(10, TimeUnit.MILLISECONDS)
 [0, 1, 2, 3, 4, 5, 6, 7]
 [8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
 [18, 19, 20, 21, 22, 23, 24, 25, 26, 27]
-...1234
+...
 ```
 
 ### Reactive pull
@@ -115,14 +115,14 @@ Observable.interval(10, TimeUnit.MILLISECONDS)
 
 RxJava 实现了一种通过 Subscriber 来通知 Observable 发射数据的方式。Subscriber 有个函数 request(n)，调用该函数用来通知 Observable 现在 Subscriber 准备接受下面 n 个数据了。在 Subscriber 的 onStart 函数里面调用 request 函数则就开启了reactive pull backpressure。这并不是传统的 pull 模型，并不会阻塞调用。只是 Subscriber 通知 Observable 当前 Subscriber 的处理能力。 通过调用 request 可以发射更多的数据。
 
-结构示意图： 
-![这里写图片描述](http://img.blog.csdn.net/20170204141145201?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvamRzamx6eA==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+结构示意图：
+![RxJava](http://img.blog.csdn.net/20170204141145201?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvamRzamx6eA==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
 
 观察者可以根据自身实际情况按需拉取数据，而不是被动接收（也就相当于告诉上游观察者把速度慢下来），最终实现了上游被观察者发送事件的速度的控制，实现了背压的策略。
 
 示例代码如下：
 
-```
+```java
 class MySubscriber extends Subscriber<T> {
     @Override
     public void onStart() {
@@ -149,7 +149,7 @@ class MySubscriber extends Subscriber<T> {
 //被观察者将产生100000个事件
 Observable observable=Observable.range(1,100000);
 observable.observeOn(Schedulers.newThread())
-            .subscribe(new MySubscriber());123456789101112131415161718192021222324252627
+            .subscribe(new MySubscriber());
 ```
 
 在 onStart 函数中调用 request(1) 开启了 backpressure 模式，告诉 Observable 一次只发射一个数据。在 onNext 里面处理完该数据后，可以请求下一个数据。通过 quest(Long.MAX_VALUE) 可以取消 backpressure 模式。
@@ -167,7 +167,7 @@ observable.observeOn(Schedulers.newThread())
 需要说明的时，Hot Observables 和cold Observables并不是严格的概念区分，它只是对于两类Observable形象的描述.
 
 - Cold Observables：指的是那些在订阅之后才开始发送事件的Observable（每个Subscriber都能接收到完整的事件）。
-- Hot Observables:指的是那些在创建了Observable之后，（不管是否订阅）就开始发送事件的Observable 
+- Hot Observables:指的是那些在创建了Observable之后，（不管是否订阅）就开始发送事件的Observable
   其实也有创建了Observable之后调用诸如publish()方法就可以开始发送事件的,这里咱们暂且忽略。
 
 我们一般使用的都是Cold Observable，除非特殊需求，才会使用Hot Observable,在这里，Hot Observable这一类是不支持背压的，而是Cold Observable这一类中也有一部分并不支持背压（比如interval，timer等操作符创建的Observable）。
@@ -180,18 +180,18 @@ observable.observeOn(Schedulers.newThread())
 
 在副作用一节讨论 doOn_ 函数的时候，我们没有讨论 doOnRequested 这个函数：
 
-```
-public final Observable<T> doOnRequest(Action1<java.lang.Long> onRequest)1
+```java
+public final Observable<T> doOnRequest(Action1<java.lang.Long> onRequest)
 ```
 
 当 Subscriber 请求更多的时候的时候， doOnRequest 就会被调用。参数中的值为请求的数量。
 
 当前 doOnRequest 还是一个 beta 测试版本的 api。 所以在开发过程中尽量避免使用。下面来演示一下这个 api：
 
-```
+```java
 Observable.range(0, 3)
     .doOnRequest(i -> System.out.println("Requested " + i))
-    .subscribe(System.out::println);123
+    .subscribe(System.out::println);
 ```
 
 结果：
@@ -200,12 +200,12 @@ Observable.range(0, 3)
 Requested 9223372036854775807
 0
 1
-21234
+2
 ```
 
 可以看到 subscriber 在开始的时候，请求了最大数量的数据。这意味着没有使用 backpressure 模型。只有当一个 Subscriber 实现了 backpressure 的时候，Subscribe 才能使用该功能。下面是一个在外部实现 控制backpressure 的示例：
 
-```
+```java
 public class ControlledPullSubscriber<T> extends Subscriber<T> {
 
     private final Action1<T> onNextAction;
@@ -254,13 +254,13 @@ public class ControlledPullSubscriber<T> extends Subscriber<T> {
     public void requestMore(int n) {
         request(n);
     }
-}12345678910111213141516171819202122232425262728293031323334353637383940414243444546474849
+}
 ```
 
 上面的实现中，如果不主动调用 requestMore 函数，则 Observable 是不会发射数据的。
 
-```
-ControlledPullSubscriber<Integer> puller = 
+```java
+ControlledPullSubscriber<Integer> puller =
         new ControlledPullSubscriber<Integer>(System.out::println);
 
 Observable.range(0, 3)
@@ -268,7 +268,7 @@ Observable.range(0, 3)
     .subscribe(puller);
 
 puller.requestMore(2);
-puller.requestMore(1);123456789
+puller.requestMore(1);
 ```
 
 结果：
@@ -280,21 +280,20 @@ Requested 2
 1
 Requested 1
 2
-1234567
 ```
 
 ControlledPullSubscriber 在onStart 中告诉 Observable 先不要发射数据。然后我们分别请求 2个数据和1 个数据。
 
 Rx 操作函数内部使用队列和缓冲来实现 backpressure ，从而避免保存无限量的数据。大量数据的缓冲应该使用专门的操作函数来处理，例如：cache、buffer 等。 zip 函数就是一个示例，第一个 Observable 可能在第二个 Observable 发射数据之前就发射了一个或者多个数据。所以 zip 需要一个较小的缓冲来匹配两个 Observable，从而避免操作失败。因此， zip 内部使用了一个 128 个数据的小缓冲。
 
-```
+```java
 Observable.range(0, 300)
     .doOnRequest(i -> System.out.println("Requested " + i))
     .zipWith(
             Observable.range(10, 300),
             (i1, i2) -> i1 + " - " + i2)
     .take(300)
-    .subscribe();1234567
+    .subscribe();
 ```
 
 结果：
@@ -303,25 +302,25 @@ Observable.range(0, 300)
 Requested 128
 Requested 90
 Requested 90
-Requested 901234
+Requested 90
 ```
 
 zip 操作函数一开始请求足够（128）的数据来填充缓冲并处理这些数据。这里 zip 操作函数具体缓冲的数据并不是主要的。读者应该记住，在 Rx 中不管开发者有没有主动启用该功能，有些操作函数内部会使用该功能。这样可以保证 Rx 数据流更加稳定可扩展。
 
 ### Backpressure 策略
 
-很多 Rx 操作函数内部都使用了 backpressure 从而避免过多的数据填满内部的队列。这样处理慢的消费者就会把这种情况传递给前面的消费者，前面的消费者开始缓冲数据直到他也缓存满为止再告诉他前面的消费者。Backpressure 并没有消除这种情况。只是让错误延迟发生，我们还是需要处理这种情况。 
+很多 Rx 操作函数内部都使用了 backpressure 从而避免过多的数据填满内部的队列。这样处理慢的消费者就会把这种情况传递给前面的消费者，前面的消费者开始缓冲数据直到他也缓存满为止再告诉他前面的消费者。Backpressure 并没有消除这种情况。只是让错误延迟发生，我们还是需要处理这种情况。
 Rx 中有操作函数可以用来处理这种消费者处理不过来的情况。
 
 ### onBackpressureBuffer
 
 onBackpressureBuffer 会缓存所有当前无法消费的数据，直到 Observer 可以处理为止。
 
-![这里写图片描述](http://img.blog.csdn.net/20160709211526480)
+![RxJava](http://img.blog.csdn.net/20160709211526480)
 
 你可以指定缓冲的数量，如果缓冲满了则会导致数据流失败。
 
-```
+```java
 Observable.interval(1, TimeUnit.MILLISECONDS)
     .onBackpressureBuffer(1000)
     .observeOn(Schedulers.newThread())
@@ -333,7 +332,7 @@ Observable.interval(1, TimeUnit.MILLISECONDS)
             } catch (Exception e) { }
         },
         System.out::println
-    );123456789101112
+    );
 ```
 
 结果：
@@ -351,17 +350,17 @@ Observable.interval(1, TimeUnit.MILLISECONDS)
 9
 10
 11
-rx.exceptions.MissingBackpressureException: Overflowed buffer of 100012345678910111213
+rx.exceptions.MissingBackpressureException: Overflowed buffer of 1000
 ```
 
 上面的示例，生产者比消费者快 100 倍。使用 1000个缓冲来处理这种消费者比较慢的情况。当消费者消费 11个数据的时候，缓冲区满了，生产者生产了 1100个数据。数据流就抛出异常了。
 
 ### onBackpressureDrop
 
-如果消费者无法处理数据，则 onBackpressureDrop 就把该数据丢弃了。 
-![这里写图片描述](http://img.blog.csdn.net/20160709211731999)
+如果消费者无法处理数据，则 onBackpressureDrop 就把该数据丢弃了。
+![RxJava](http://img.blog.csdn.net/20160709211731999)
 
-```
+```java
 Observable.interval(1, TimeUnit.MILLISECONDS)
     .onBackpressureDrop()
     .observeOn(Schedulers.newThread())
@@ -372,7 +371,7 @@ Observable.interval(1, TimeUnit.MILLISECONDS)
                 Thread.sleep(100);
             } catch (Exception e) { }
         },
-        System.out::println);1234567891011
+        System.out::println);
 ```
 
 结果：
@@ -386,7 +385,7 @@ Observable.interval(1, TimeUnit.MILLISECONDS)
 127
 12861
 12862
-...123456789
+...
 ```
 
 这个示例中，前面 128 个数据正常的被处理的，这是应为 observeOn 在切换线程的时候， 使用了一个 128 个数据的小缓冲。
