--- a/RxJava系列教程/6.RxJava 教程第二部分：事件流基础之 检查数据.md
+++ b/RxJava系列教程/6.RxJava 教程第二部分：事件流基础之 检查数据.md
@@ -122,7 +122,7 @@ Completed12
 
 如果源 exists 发射的数据中有一个满足条件，则 exists 就返回 true。 exists 和 all 一样也是返回一个 Observable 而不是直接返回 布尔值。
 
-![这里写图片描述](http://img.blog.csdn.net/20160705212745920)
+![RxJava](http://img.blog.csdn.net/20160705212745920)
 
 ```
 Observable<Integer> values = Observable.range(0, 2);
@@ -143,7 +143,7 @@ false
 Completed12
 ```
 
-上面示例中只发射了 0 和1 两个数据，而这两个数据都不满足大于2的条件，所以返回结果为 false。 
+上面示例中只发射了 0 和1 两个数据，而这两个数据都不满足大于2的条件，所以返回结果为 false。
 如果我们多发射几个数据，则就会满足条件了。
 
 ```
@@ -159,8 +159,8 @@ Completed12
 
 ### isEmpty
 
-顾名思义，判断一个 Observable 是否是空的，也就是没有发射任何数据就结束了。 
-![这里写图片描述](http://img.blog.csdn.net/20160705212801343)
+顾名思义，判断一个 Observable 是否是空的，也就是没有发射任何数据就结束了。
+![RxJava](http://img.blog.csdn.net/20160705212801343)
 
 ```
 Observable<Long> values = Observable.timer(1000, TimeUnit.MILLISECONDS);
@@ -185,10 +185,10 @@ Completed12
 
 ### contains
 
-contains 使用 Object.equals 函数来判断源 Observable 是否发射了相同的数据。 
+contains 使用 Object.equals 函数来判断源 Observable 是否发射了相同的数据。
 只要遇到相同的数据，则 contains 就立刻返回。
 
-![这里写图片描述](http://img.blog.csdn.net/20160705212814077)
+![RxJava](http://img.blog.csdn.net/20160705212814077)
 
 ```
 Observable<Long> values = Observable.interval(100, TimeUnit.MILLISECONDS);
@@ -215,8 +215,8 @@ Completed12
 
 ### defaultIfEmpty
 
-如果你不想单独处理没有发射任何数据的情况（需要用 isEmpty 函数来检查是否为空），则可以使用 defaultIfEmpty 函数来强制一个空的 Observable 发射一个默认数据。 
-![这里写图片描述](http://img.blog.csdn.net/20160705212829437)
+如果你不想单独处理没有发射任何数据的情况（需要用 isEmpty 函数来检查是否为空），则可以使用 defaultIfEmpty 函数来强制一个空的 Observable 发射一个默认数据。
+![RxJava](http://img.blog.csdn.net/20160705212829437)
 
 ```
 Observable<Integer> values = Observable.empty();
@@ -259,8 +259,8 @@ Error: java.lang.Exception1
 
 ### elementAt
 
-从特定的位置选择一个数据发射。 
-![这里写图片描述](http://img.blog.csdn.net/20160705212844530)
+从特定的位置选择一个数据发射。
+![RxJava](http://img.blog.csdn.net/20160705212844530)
 
 ```
 Observable<Integer> values = Observable.range(100, 10);
