--- a/RxJava系列教程/5.RxJava 教程第二部分：事件流基础之 过滤数据.md
+++ b/RxJava系列教程/5.RxJava 教程第二部分：事件流基础之 过滤数据.md
@@ -5,7 +5,7 @@ Marble diagrams（弹子图）
 
 你可以想象一个机器，不停的发射弹子出来，发射出来的弹子可以被其他模块再次加工（比如 上色、把不合格的弹子给回收了），加工完成后再次发射出来 … 弹子图就是对这个机器的抽象描述。在 Rx 中流行使用这种方式来描述操作符，毕竟图片看起来直观多了。 Marble diagrams（弹子图）基本元素如下：
 
-![RxJava](http://img.blog.csdn.net/20160705163048323)
+![RxJava](images/过滤数据_01.png)
 
 时间从左往右流动，每个图形代表一个数据，竖线代表发射完成了，而 X 代表出现错误了。 操作函数把上面的 Observable 转换下面的新的 Observable ， 里面的每个数据都被操作函数给处理了并返回一个新的数据。
 
@@ -13,7 +13,7 @@ Marble diagrams（弹子图）
 
 filter 函数使用一个 predicate 函数接口来判断每个发射的值是否能通过这个判断。如果返回 true，则该数据继续往下一个（过滤后的） Observable 发射。
 
-![RxJava](http://img.blog.csdn.net/20160705212153387)
+![RxJava](images/过滤数据_02.png)
 
 比如下面示例创建了一个发射 0 到 9 十个数字的 源Observable。在该 Observable 使用一个 filter 操作来过滤掉奇数，最后只保留偶数。
 
@@ -44,7 +44,7 @@ Completed
 
 distinct 函数用来过滤掉已经出现过的数据了。
 
-![RxJava](http://img.blog.csdn.net/20160705212212240)
+![RxJava](images/过滤数据_03.png)
 
 ```java
 Observable<Integer> values = Observable.create(o -> {
@@ -82,7 +82,7 @@ distinct 还有一个重载函数，该函数有个生成 key 的参数。每个
 public final <U> Observable<T> distinct(Func1<? super T,? extends U> keySelector)
 ```
 
-![RxJava](http://img.blog.csdn.net/20160705212228319)
+![RxJava](images/过滤数据_04.png)
 
 下面示例中使用字符串的第一个字母作为 key 来比较。
 
@@ -128,7 +128,7 @@ public final <U> Observable<T> distinctUntilChanged(Func1<? super T,? extends U>
 
 ```
 
-![RxJava](http://img.blog.csdn.net/20160705212248231)
+![RxJava](images/过滤数据_05.png)
 
 ```java
 Observable<Integer> values = Observable.create(o -> {
@@ -226,7 +226,7 @@ Observable<T>   take(int num)
 
 ```
 
-![RxJava](http://img.blog.csdn.net/20160705212339122)
+![RxJava](images/过滤数据_06.png)
 
 ```
 Observable<Integer> values = Observable.range(0, 5);
@@ -283,7 +283,7 @@ skip 返回 take 操作忽略的另外一部分数据。也就是跳过前面 N 
 Observable<T>   skip(int num)
 ```
 
-![RxJava](http://img.blog.csdn.net/20160705212408321)
+![RxJava](images/过滤数据_07.png)
 
 ```
 Observable<Integer> values = Observable.range(0, 5);
@@ -432,7 +432,7 @@ public final <E> Observable<T> takeUntil(Observable<? extends E> other)
 
 ```
 
-![RxJava](http://img.blog.csdn.net/20160705212437919)
+![RxJava](images/过滤数据_08.png)
 
 ```
 Observable<Long> values = Observable.interval(100,TimeUnit.MILLISECONDS);
