--- a/RxJava系列教程/6.RxJava 教程第二部分：事件流基础之 检查数据.md
+++ b/RxJava系列教程/6.RxJava 教程第二部分：事件流基础之 检查数据.md
@@ -122,7 +122,7 @@ Completed12
 
 如果源 exists 发射的数据中有一个满足条件，则 exists 就返回 true。 exists 和 all 一样也是返回一个 Observable 而不是直接返回 布尔值。
 
-![RxJava](http://img.blog.csdn.net/20160705212745920)
+![RxJava](images/检查数据_01.png)
 
 ```
 Observable<Integer> values = Observable.range(0, 2);
@@ -160,7 +160,8 @@ Completed12
 ### isEmpty
 
 顾名思义，判断一个 Observable 是否是空的，也就是没有发射任何数据就结束了。
-![RxJava](http://img.blog.csdn.net/20160705212801343)
+
+![RxJava](images/检查数据_02.png)
 
 ```
 Observable<Long> values = Observable.timer(1000, TimeUnit.MILLISECONDS);
@@ -188,7 +189,7 @@ Completed12
 contains 使用 Object.equals 函数来判断源 Observable 是否发射了相同的数据。
 只要遇到相同的数据，则 contains 就立刻返回。
 
-![RxJava](http://img.blog.csdn.net/20160705212814077)
+![RxJava](images/检查数据_03.png)
 
 ```
 Observable<Long> values = Observable.interval(100, TimeUnit.MILLISECONDS);
@@ -216,7 +217,8 @@ Completed12
 ### defaultIfEmpty
 
 如果你不想单独处理没有发射任何数据的情况（需要用 isEmpty 函数来检查是否为空），则可以使用 defaultIfEmpty 函数来强制一个空的 Observable 发射一个默认数据。
-![RxJava](http://img.blog.csdn.net/20160705212829437)
+
+![RxJava](images/检查数据_04.png)
 
 ```
 Observable<Integer> values = Observable.empty();
@@ -260,7 +262,8 @@ Error: java.lang.Exception1
 ### elementAt
 
 从特定的位置选择一个数据发射。
-![RxJava](http://img.blog.csdn.net/20160705212844530)
+
+![RxJava](images/检查数据_05.png)
 
 ```
 Observable<Integer> values = Observable.range(100, 10);
