--- a/RxJava系列教程/5.RxJava 教程第二部分：事件流基础之 过滤数据.md
+++ b/RxJava系列教程/5.RxJava 教程第二部分：事件流基础之 过滤数据.md
@@ -1,3 +1,5 @@
+# 5.RxJava 教程第二部分：事件流基础之 过滤数据
+
 现在你可以用 Rx 来处理大批量实时数据，但是如果把所有大批量数据整个打包发给你的话，使用 Rx 还有啥优势呢？ 本节 我们将介绍一些操作函数（operators ）来过滤数据、或者把所有数据变成一个需要的数据。
 
 如果你了解过函数式编程（functional programming）或者 Java 中的 Stream，则本节介绍的操作函数是非常眼熟的。本节中所有的操作符都返回一个不影响前一个 Observable 的新 Observable。 整个 Rx 框架都遵守该原则。通过创建新的 Observable 来转换之前的 Observable而不会对之前的 Observable 造成干扰。订阅到初始 Observable 的 Subscribers 不会受到任何影响，但是在后面的章节中也会看到，开发者也需要当心该原则。
