--- a/RxJava系列教程/7.RxJava 教程第二部分：事件流基础之 聚合.md
+++ b/RxJava系列教程/7.RxJava 教程第二部分：事件流基础之 聚合.md
@@ -1,3 +1,5 @@
+# 7.RxJava 教程第二部分：事件流基础之 聚合
+
 ### Aggregation
 
 前面介绍了如何过滤掉不需要的数据、如何根据各种条件停止发射数据、如何检查数据是否符合某个条件。这些操作对数据流来说都是非常有意义的。 本节介绍如何根据数据流中的数据来生成新的有意义的数据。
